create base for navbar and hero

--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style type="text/css" src="style.css"></style>
+    <link rel="stylesheet" href="style.css">
 	<title>William Chu</title>
 </head>
 <body>
+	<header>
+		<nav>
+			<div id="logo">LOGO</div>
+			<ul id="nav-links">
+				<li>about</li>
+				<li>projects</li>
+				<li>contact</li>
+			</ul>
+		</nav>
+	</header>
 
+	<main>
+	<div class="hero">
+		<div class="hero-left">	
+		<h1>Hi there! I'm William Chu</h1> <br>
+		<p>I am a UI/UX & Graphic Designer</p></div>
+
+		<div class="hero-right">
+			<p>image here</p>
+		</div>
+
+	</div>
+
+	</main>
+	<footer></footer>
 </body>
 </html>
